// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReviewActions component component snapshot: do not show rubric 1`] = `
<div>
  <ActionRow
    className="review-actions"
  >
    <span
      className="review-actions-username"
    >
      <span
        className="lead"
      >
        test-userDisplay
      </span>
      <StatusBadge
        className="review-actions-status mr-3"
        status="grading-status"
      />
      <span
        className="small"
      >
        <FormattedMessage
          defaultMessage="Score: {pointsEarned}/{pointsPossible}"
          description="Review pane action bar score display"
          id="ora-grading.ReviewActions.pointsDisplay"
          values={
            Object {
              "pointsEarned": 3,
              "pointsPossible": 10,
            }
          }
        />
      </span>
    </span>
    <div
      className="review-actions-group"
    >
      <Button
        onClick={[MockFunction this.props.toggleShowRubric]}
        variant="outline-primary mr-2"
      >
        <FormattedMessage
          defaultMessage="Show Rubric"
          description="Review pane action bar Show Rubric button text"
          id="ora-grading.ReviewActions.showRubric"
        />
      </Button>
      <StartGradingButton />
      <SubmissionNavigation />
    </div>
  </ActionRow>
</div>
`;

exports[`ReviewActions component component snapshot: loading 1`] = `
<div>
  <ActionRow
    className="review-actions"
  >
    <span
      className="review-actions-username"
    >
      <span
        className="lead"
      >
        test-userDisplay
      </span>
      <StatusBadge
        className="review-actions-status mr-3"
        status="grading-status"
      />
      <span
        className="small"
      >
        <FormattedMessage
          defaultMessage="Score: {pointsEarned}/{pointsPossible}"
          description="Review pane action bar score display"
          id="ora-grading.ReviewActions.pointsDisplay"
          values={
            Object {
              "pointsEarned": 3,
              "pointsPossible": 10,
            }
          }
        />
      </span>
    </span>
    <div
      className="review-actions-group"
    >
      <SubmissionNavigation />
    </div>
  </ActionRow>
</div>
`;

exports[`ReviewActions component component snapshot: show rubric, no score 1`] = `
<div>
  <ActionRow
    className="review-actions"
  >
    <span
      className="review-actions-username"
    >
      <span
        className="lead"
      >
        test-userDisplay
      </span>
      <StatusBadge
        className="review-actions-status mr-3"
        status="grading-status"
      />
      <span
        className="small"
      />
    </span>
    <div
      className="review-actions-group"
    >
      <Button
        onClick={[MockFunction this.props.toggleShowRubric]}
        variant="outline-primary mr-2"
      >
        <FormattedMessage
          defaultMessage="Hide Rubric"
          description="Review pane action bar Hide Rubric button text"
          id="ora-grading.ReviewActions.hideRubric"
        />
      </Button>
      <StartGradingButton />
      <SubmissionNavigation />
    </div>
  </ActionRow>
</div>
`;
